# Project2

./: AStarSearch.h  BFS.h  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DFS.h  FileCacheManager.cpp  FileCacheManager.h  Graph.h  ISearchable.h  ISearcher.h  Matrix.cpp  Matrix.h  MatrixFileCacheManager.h  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  OtherFunctions.cpp  OtherFunctions.h  Point.cpp  Point.h  Searchable.h  Searcher.cpp  Searcher.h  Server.cpp  Server.h  Solver.h  SolverBestSearch.h  SolverSearchCost.h  State.cpp  State.h  StringReverser.cpp  StringReverser.h  main.cpp
